--- a/index.html
+++ b/index.html
@@ -1004,10 +1004,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="social-icons">
-            <a href="https://www.instagram.com/lecieletoile" target="_blank" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.tiktok.com/@lecieletoile" target="_blank" aria-label="Follow us on TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="https://www.facebook.com/lecieletoile" target="_blank" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.twitter.com/lecieletoile" target="_blank" aria-label="Follow us on Twitter"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Visit Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com" target="_blank" aria-label="Visit TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.facebook.com" target="_blank" aria-label="Visit Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.twitter.com" target="_blank" aria-label="Visit Twitter"><i class="fab fa-x-twitter"></i></a>
         </div>
         <p>&copy; 2025 Le Ciel Étoilé. All rights reserved.</p>
     </footer>
