--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
             color: var(--primary-color);
             transition: all 0.3s ease;
             flex-shrink: 0;
+            overflow: hidden;
         }
 
         .square-displayer.middle {
@@ -1010,7 +1011,9 @@
             carouselContainer.innerHTML = `
                 <div class="carousel-slide">
                     ${visibleImages.map((num, index) => `
-                        <div class="square-displayer ${index === 1 ? 'middle' : ''}">${num}</div>
+                        <div class="square-displayer ${index === 1 ? 'middle' : ''}">
+                            <img src="images/gallery_image_${num}.png" alt="Gallery image ${num}" style="width:100%;height:100%;object-fit:cover;">
+                        </div>
                     `).join('')}
                 </div>
             `;
